Sun Mar  6 10:07:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
        * tao/Stub.h:
        * tao/Stub.inl:
        * tao/Stub.cpp:
          Reworked simplication of the stub

Fri Mar  4 18:04:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL_Test.mpc:
        * tests/IDL_Test/anyunion.idl:
        * tests/IDL_Test/union.idl:
          Moved union with any member to its own file and don't compile that
          file with RTI DDS

Fri Mar  4 09:38:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.h:
        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
          Reverted changes related to Stub.*, these changes break the ImR
          example

        * tao/Stub.h:
        * tao/Stub.inl:
        * tao/Stub.cpp:
          Reverted, these changes break the ImR example

        * tests/Client_Leaks/README:
        * tests/Client_Leaks/child.cpp:
        * tests/Client_Leaks/server.cpp:
          Initialize pointers to 0

Wed Mar  2 19:22:23 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.h:
        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
        * tao/Stub.h:
        * tao/Stub.inl:
        * tao/Stub.cpp:
          Applied changes reverted on Mon Feb 14, didn't break the ImR example

Wed Mar  2 16:02:01 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/Synch_Queued_Message.cpp:
          Fixed leak of contents in synch queued message. Thanks to
          Chris Galli <christian dot galli at gmail dot com> for providing
          this fix. It fixes bug#3825.

        * tests/Big_Oneways/server.cpp:
        * tests/Big_Oneways/Session.cpp:
        * tests/Big_Oneways/Coordinator.cpp:
          Fixed leaks local to this test.
